# basis-2

./: .gitignore  BUILD.md  MANIFEST.in  README.md  __init__.py  aggregator.py  chunking.py  configs.py  pyproject.toml  requirements.txt  router.py  setup.py  types.py
adaptors/: model_adaptors.py
data_sources/: __init__.py  base.py  content_handler.py  json_file_handler.py  mongodb_handler.py  postgres_handler.py  redis_handler.py  s3_handler.py
examples/: example_1.py
providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
router/: __init__.py  aggregator.py  chunking.py  router.py  types.py
router/data_sources/: __init__.py  dynamodb_handler.py  mongodb_handler.py  postgres_handler.py  s3_handler.py
router/providers/: __init__.py  anthropic_provider.py  gemini_provider.py
tests/: generate_test_data.py  test_agent_rollout.py  test_all_data_sources.py  test_all_providers.py
tests/test_data/: test_small.json
