[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basis-router"
version = "0.1.1"
description = "A flexible routing system for managing LLM requests across multiple providers with intelligent chunking and result aggregation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["llm", "router", "openai", "anthropic", "gemini", "chunking", "aggregation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies (always required)
dependencies = []

# Optional dependencies - users can install what they need
[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
gemini = ["google-generativeai>=0.3.0"]
s3 = ["boto3>=1.28.0"]
mongodb = ["pymongo>=4.6.0"]
redis = ["redis>=5.0.0"]
postgres = ["asyncpg>=0.29.0"]
chunking = ["tiktoken>=0.5.0"]

# All optional dependencies for convenience
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "boto3>=1.28.0",
    "pymongo>=4.6.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-router"
Documentation = "https://github.com/yourusername/llm-router#readme"
Repository = "https://github.com/yourusername/llm-router"
Issues = "https://github.com/yourusername/llm-router/issues"

[tool.setuptools]
# Automatically find packages (will find 'router' package at root)
packages = {find = {}}

[tool.setuptools.package-data]
router = ["py.typed"]

